# advisor

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
agent/advisor/: __init__.py  api.py  benchmark.py  cli.py  coding_adapter.py  context_builder.py  eval_fixtures.py  eval_scoring.py  gateway.py  hardening.py  image_adapter.py  injector.py  integrations.py  labeling.py  metrics.py  observability.py  operator_runtime.py  orchestration.py  profiles.py  replay.py  research_adapter.py  results_pass.py  reward_model.py  reward_registry.py  runtime_mlx.py  schemas.py  settings.py  trace_store.py  training_backends.py  training_pipeline.py  training_rollouts.py  training_runtime.py  validator.py
agent/advisor/adapters/: coding_adapter.py  (+4 more)
config/: advisor_profiles.toml
docs/: ARCHITECTURE.md  PAPER_FOUNDATION.md  PRODUCTION_CHECKLIST.md  architecture-components.html  architecture-overall.html  architecture-training.html  engineering-architecture.html
docs/eval/: PHASE10_ORCHESTRATION.md  PHASE11_SECURITY_OBSERVABILITY.md  PHASE12_INTEGRATIONS.md  PHASE13_BENCHMARKS.md  PHASE14_TRAINING_RUNTIME.md  PHASE15_OPERATOR_SURFACE.md  PHASE16_RESULTS_PASS.md  PHASE17_HARDENING.md  PHASE5_MEASUREMENT_OVER_TIME.md  PHASE6_HARDENING.md  PHASE6_REAL_MLX_LORA_ARTIFACTS.md  PHASE7_EVAL.md  PHASE7_OPERATOR_SURFACE.md  PHASE8_FINAL_VALIDATION_GATE.md  PHASE8_REWARD_PIPELINE.md  PHASE9_AUTONOMOUS_LEARNING_PRODUCT_COMPLETION.md  PHASE9_OPTIMIZATION.md
scripts/: advisor_metrics_summary.py  export_advisor_training_examples.py
(+83 files in other folders)
